--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./app.js",
-    "sass": "node-sass --include-path scss ./src/styles.scss ./public/styles.css"
+    "sass": "node-sass --include-path scss ./src/styles.scss ./styles.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "webpack": "^5.10.3"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.14",
     "mongodb": "^3.6.2",
-    "router": "^1.3.5",
-    "node-sass": "^5.0.0"
+    "mongoose": "^5.11.8",
+    "node-sass": "^5.0.0",
+    "router": "^1.3.5"
   }
 }
